src/test/ui/parser/bad-pointer-type.stderr
error: expected mut or const in raw pointer type (use `*mut T` or `*const T` as appropriate)
  --> $DIR/bad-pointer-type.rs:3:11
   |
LL | fn foo(_: *()) {
   |           ^

error: aborting due to previous error

